Wed Jul 04 17:27:22 BST 2007  Olly Betts <olly@survex.com>

	* NEWS: Partly update.

Wed Jul 04 17:19:51 BST 2007  Olly Betts <olly@survex.com>

	* AUTHORS: Add Simon Tatham for spotting the -INFINITY issue, and for
	  a lot of useful advice during the CVS to SVN transition.

Wed Jul 04 17:16:59 BST 2007  Olly Betts <olly@survex.com>

	* api/,include/xapian/queryparser.h,tests/queryparsertest.cc: Rename
	  Xapian::NumberValueRangeProcessor::float_to_string() to
	  Xapian::sortable_serialise() and
	  Xapian::NumberValueRangeProcessor::string_to_float() to
	  Xapian::sortable_unserialise().

Wed Jul 04 17:16:16 BST 2007  Olly Betts <olly@survex.com>

	* HACKING: Add rationale for 2 space indents for "public", etc.

Wed Jul 04 14:09:57 BST 2007  Olly Betts <olly@survex.com>

	* tests/queryparsertest.cc: Loops on integers and scale to doubles
	  rather than looping on doubles and scaling to get integers.

Wed Jul 04 13:01:11 BST 2007  Olly Betts <olly@survex.com>

	* tests/queryparsertest.cc: If the NumberValueRangeProcessor
	  string encodings don't sort the same way, there's no need to report
	  the string encodings in the error message as they are written to
	  "tout" just before, along with the respective numbers they came
	  from.  The string encodings can contain control characters, so are
	  liable to corrupt the test failure message.

Wed Jul 04 12:25:15 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* api/valuerangeproc.cc: Fix encoding of extremely large, negative,
	  non-IEEE representation to be -INFINITY, not +INFINITY.  Thanks
	  to Simon Tatham for pointing this out.
	* include/xapian/queryparser.h: Add a documentation comment note
	  that zero and -zero will be transformed to the same value.

Wed Jul 04 10:09:33 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* api/valuerangeproc.cc: Change encoding used for doubles to a much
	  more compact scheme, and add support for +-INFINITY.  Also, some